Improve overall code + changing links